# thoth

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PKM-REVIEW-2026-06.md  README.md  SPEC.md  justfile  pyproject.toml  switcher.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _container.yml  _dist.yml  _docs.yml  _helm.yml  _precommit.yml  _test.yml  _tox.yml  ci.yml
.zed/: settings.json
0.5.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.5.0/.doctrees/: _api.doctree  index.doctree  reference.doctree
0.5.0/_api/: thoth.html
0.5.0/explanations/: architecture-review.html  architecture.html  decisions.html
0.5.0/how-to/: contribute.html  deploy-appliance.html  first-light.html  import-existing-files.html  recovery.html  slack-setup.html
0.5.0/tutorials/: installation.html
0.6.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.6.0/.doctrees/: tutorials.doctree
0.6.0/_api/: thoth.html
0.6.0/_sources/: _api.rst.txt  reference.md.txt
0.6.0/explanations/: architecture-review.html  architecture.html  decisions.html
0.6.0/how-to/: contribute.html  deploy-appliance.html  first-light.html  import-existing-files.html  recovery.html  slack-setup.html
0.6.0/tutorials/: installation.html
0.7.0-beta.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.7.0-beta.1/.doctrees/: reference.doctree
0.7.0-beta.1/_api/: thoth.html
0.7.0-beta.1/_static/: documentation_options.js
0.7.0-beta.1/explanations/: architecture-review.html  architecture.html  decisions.html
0.7.0-beta.1/how-to/: contribute.html  deploy-appliance.html  deploy-kubernetes.html  first-light.html  import-existing-files.html  mcp-server-setup.html  recovery.html  run-container.html  slack-setup.html
0.7.0-beta.1/reference/: configuration.html
0.7.0-beta.1/tutorials/: installation.html
0.7.0-beta.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.7.0-beta.2/.doctrees/: how-to.doctree
0.7.0-beta.2/_api/: thoth.html
0.7.0-beta.2/_static/: documentation_options.js
0.7.0-beta.2/explanations/: architecture-review.html  architecture.html  decisions.html
0.7.0-beta.2/how-to/: contribute.html  deploy-appliance.html  deploy-kubernetes.html  first-light.html  import-existing-files.html  mcp-server-setup.html  recovery.html  run-container.html  slack-setup.html
0.7.0-beta.2/reference/: configuration.html
0.7.0-beta.2/tutorials/: installation.html
0.8.0-beta.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.8.0-beta.1/.doctrees/: index.doctree
0.8.0-beta.1/_api/: thoth.html
0.8.0-beta.1/explanations/: architecture-review.html  architecture.html  decisions.html
0.8.0-beta.1/how-to/: contribute.html  deploy-appliance.html  deploy-kubernetes.html  first-light.html  import-existing-files.html  mcp-oauth.html  mcp-server-setup.html  recovery.html  run-container.html  slack-setup.html
0.8.0-beta.1/reference/: configuration.html
0.8.0-beta.1/tutorials/: installation.html
0.8.0-beta.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.8.0-beta.2/_api/: thoth.html
0.8.0-beta.2/_sources/: reference.md.txt
0.8.0-beta.2/explanations/: architecture-review.html  architecture.html  decisions.html
0.8.0-beta.2/how-to/: contribute.html  deploy-appliance.html  deploy-kubernetes.html  first-light.html  import-existing-files.html  mcp-oauth.html  mcp-server-setup.html  recovery.html  run-container.html  slack-setup.html
0.8.0-beta.2/reference/: configuration.html
0.8.0-beta.2/tutorials/: installation.html
0.8.0-beta.3/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.8.0-beta.3/_api/: thoth.html
0.8.0-beta.3/_static/: documentation_options.js
0.8.0-beta.3/explanations/: architecture-review.html  architecture.html  decisions.html
0.8.0-beta.3/how-to/: contribute.html  deploy-appliance.html  deploy-kubernetes.html  first-light.html  import-existing-files.html  mcp-oauth.html  mcp-server-setup.html  recovery.html  run-container.html  slack-setup.html
0.8.0-beta.3/reference/: configuration.html
0.8.0-beta.3/tutorials/: installation.html
0.9.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.9.0/_api/: thoth.html
0.9.0/explanations/: architecture-review.html  architecture.html  (+1 more)
deploy/: .env.example  crontab  hindsight-api.env.example  thoth-hindsight.service  thoth-mcp.service  thoth-slack.service
docs/: conf.py
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
schemas/: thoth.schema.json
scripts/: devshell.sh
tests/: test_alerts.py  test_analyse.py  test_budget.py  test_cli.py  test_config.py  test_deploy.py  test_extract.py  test_git_sync.py  test_hindsight.py  test_images.py  test_inbox_drain.py  test_ingest.py  test_intent.py  test_lint.py  test_live_smoke.py  test_llm.py  test_mcp_http_auth.py  test_mcp_oauth.py  test_mcp_server.py  test_query.py  test_reindex_from_vault.py  test_research.py  test_scanner.py  test_slack_app.py  test_state.py  test_summary.py  test_templates.py  test_vault.py
(+387 files in other folders)
