[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "thoth"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
description = "agent PKM with semantic index, slack connector and MCP"
dependencies = [
    "httpx",
    "python-dotenv",
    "python-frontmatter",
    "python-slugify",
    "pyyaml",
    "tenacity",
    "tzdata",
]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"

# Runtime-only clients for the live appliance. These are deliberately NOT base
# dependencies: they are absent in CI (which installs base + dev only) and are
# imported lazily inside functions, so pytest collection stays import-safe. Install
# them on the appliance with ``pip install thoth[runtime]``.
[project.optional-dependencies]
runtime = [
    "anthropic",
    "exa-py",
    "firecrawl-py",
    "mcp",
    "slack-bolt",
]

[dependency-groups]
dev = [
    "copier",
    "myst-parser",
    "pre-commit",
    "pydata-sphinx-theme>=0.12",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-uv",
    "types-mock",
]

[project.scripts]
thoth = "thoth.__main__:main"

[project.urls]
GitHub = "https://github.com/gilesknap/thoth"

[[project.authors]] # Further authors may be added by duplicating this section
email = "gilesknap@gmail.com"
name = "Giles Knap"

[tool.setuptools_scm]
version_file = "src/thoth/_version.py"

# Ship the packaged vault-spine + Bases templates (read at runtime via
# importlib.resources by thoth.templates) inside built wheels. The data directory is
# deliberately not a package (no __init__.py), so it must be declared as package-data.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"thoth" = ["templates/*.md", "templates/_bases/*.base"]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = false # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
# Warnings are errors, EXCEPT a pydantic UserWarning emitted by firecrawl-py 4.x's
# own models (``MonitorPageDiff``/``MonitorPageSnapshot`` declare a ``json`` field
# that shadows ``BaseModel.json``). It fires when the real SDK is imported in the
# live firecrawl smoke (never in CI, which has no runtime deps), and we cannot fix a
# third-party model -- so ignore that one message rather than let it mask the test.
filterwarnings = [
    "error",
    'ignore:Field name "json" in ".*" shadows an attribute in parent "BaseModel":UserWarning',
]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
# Custom markers (registered so filterwarnings=error does not trip PytestUnknownMarkWarning)
markers = [
    "live: opt-in first-light smoke tests that hit real external services (Anthropic, Hindsight, Slack, MCP, Exa, Firecrawl); skipped unless THOTH_LIVE_SMOKE=1. Run on the VPS with `THOTH_LIVE_SMOKE=1 uv run pytest -m live`.",
]

[tool.coverage.run]
patch = ["subprocess"]
data_file = "/tmp/thoth.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

[tool.tox]
skipsdist = true
# envs to runs automatically with tox -p
env_list = ["pre-commit", "type-checking", "tests", "docs"]

[tool.tox.env_run_base]
# Pass all environment variables to the test environments
passenv = ["*"]

[tool.tox.env.pre-commit]
description = "Run pre-commit on all files"
commands = [
    [
        "pre-commit",
        "run",
        "--all-files",
        "--show-diff-on-failure",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.type-checking]
description = "Run pyright"
commands = [
    [
        "pyright",
        "--pythonpath",
        "{env:VIRTUAL_ENV}/bin/python",
        "src",
        "tests",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.tests]
description = "Run tests with coverage"
commands = [
    [
        "pytest",
        "--cov=thoth",
        "--cov-report",
        "term",
        "--cov-report",
        "xml:cov.xml",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs]
description = "Run docs build with clean environment"
commands = [
    [
        "sphinx-build",
        "--fresh-env",
        "--show-traceback",
        "--fail-on-warning",
        "--keep-going",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs-autobuild]
description = "Run docs with autobuild on change"
commands = [
    [
        "sphinx-autobuild",
        "--show-traceback",
        "--watch",
        "README.md",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
lint.select = [
    "B",   # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",  # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",   # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",   # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "N",   # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "W",   # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",   # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP",  # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SLF", # self - https://docs.astral.sh/ruff/settings/#lintflake8-self
]

[tool.ruff.lint.per-file-ignores]
# By default, private member access is allowed in tests
# See https://github.com/DiamondLightSource/python-copier-template/issues/154
# Remove this line to forbid private member access in tests
"tests/**/*" = ["SLF001"]
